# EigenChineseDocument

./: .gitignore
Eigen/: CMakeLists.txt
Eigen/Chapter1_DenseMatrixAndArrary/: Section5_AdvancedInitialization.hpp
